--- a/index.html
+++ b/index.html
@@ -1,33 +1,24 @@
-<!DOCTYPE html>
-<html>
+<!doctype html>
+<html lang="en">
 
-    <head>
-        <meta charset="utf-8"/>
-        <title>Livedocs-cors-test</title>
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-        <script type='text/javascript'>
-            function main() {       
-                console.log("main function");
-                console.log("ajax request to the resource which will require cors enabled");
-                $.ajax
-                ({
-                    contentType: 'application/json',
-                    data: '{"username":"mcodogno","password":"FIflexld123!"}',
-                    dataType: "json",
-                    type: 'POST',
-                    url: "http://lces4disp.m2sc.local:8080/DispatcherSvil/Authenticate",
-                    success: function(data) 
-                    {
-                        console.log("log response on success");
-                        console.log(data);
-                    }
-                });
-            }
-        </script>
-    </head>
- 
-    <body onLoad='main();'>
-    <a href="test.html">test api github.com</a>
-    </body>
+<head>
+  <meta charset="utf-8">
+  <title>Livedocs</title>
+  <base href="/">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <script src="assets/js/jquery-3.5.1.min.js"></script>
+  <script src="assets/js/popper.min.js"></script>
+  <link href="assets/css/bootstrap.min.css" />
+  <script src="assets/js/bootstrap.min.js"></script>
+  <link
+    href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
+    rel="stylesheet">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/babel-core/5.6.15/browser-polyfill.min.js"></script>
+<link rel="stylesheet" href="styles.30125859b94767539994.css"></head>
+
+<body>
+  <app-root></app-root>
+<script src="runtime.acf0dec4155e77772545.js" defer></script><script src="polyfills.684c68260a4addaab05f.js" defer></script><script src="scripts.786d1ef539350f1e4b5b.js" defer></script><script src="main.6b270fb34db0e7dd845d.js" defer></script></body>
 
 </html>
